refactor: 重构下载新奔奔相关代码；重构责任链相关代码